# BipedLocomotion

./: .gitignore
drake/: controller_SE2.py  controller_SE3.py  disturbance_generator.py  ik_SE3_test.py  ik_test.py  joystick.py  simulator.py  simulator_SE2.py  simulator_SE3.py  visualize_model.py
drake/SE2/: controller_SE2.py  disturbance_generator_SE2.py  ik_SE2_test.py  mpc_SE2.py  mpc_SE2_arms.py  simulator_SE2.py  trajectory_generator_SE2.py
drake/SE2/data/: plot_data.m
drake/SE2/frontal/: controller_SE2_frontal.py  ik_test.py  mpc_SE2_frontal.py  mpc_SE2_frontal_arms.py  simulator_SE2_frontal.py  trajectory_generator_SE2_frontal.py
drake/SE3/: controller_SE3.py  mpc_SE3.py  mpc_SE3_arms.py  simulator_SE3.py  trajectory_generator_SE3.py
drake/SE3/data/: plot_contact.m  plot_data.m  plot_data_arms.m
models/: achilles_SE2_arms_drake.urdf  achilles_SE2_arms_drake_frontal.urdf  achilles_SE2_drake.urdf  achilles_SE2_drake_frontal.urdf  achilles_SE2_drake_ik.urdf  achilles_SE3_drake.urdf  achilles_SE3_drake_ik.urdf  achilles_drake.urdf
mujoco/: CMakeLists.txt  simulation.py
mujoco/src/: main.cpp  simulator.cpp
sim/config/: config.yaml
sim/src/: disturbance_experiment.sh  mpc.py  no_arms_mpc.py
sim/src/data/: plot_contact.m  plot_data.m  plot_disturbances.m  plot_disturbances.py  plot_velocity_ref.m
sim/src/data/plots/backwards/: plot_contact.m
sim/src/data/plots/forwards/: plot_contact.m
sim/utils/: contact_logger.py  disturbance_generator.py  joystick.py  mpc_utils.py  standing_test.py  trajectory_generator.py  visualize_model.py
